[project]
name = "blinx_robots"
version = "4.4.3"
authors = [
    {name = "任伟明", email = "corejk@163.com"},
]
description = "比邻星桌面式六轴协作机械臂开源版本 SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "roboticstoolbox-python>=1.1.1",
    "loguru>=0.7.2",
    "retrying>=1.3.4",
]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://gitee.com/blxsoftware/robot_arm_sdk"
Issues = "https://gitee.com/blxsoftware/robot_arm_sdk/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
build = [
    "nuitka==1.8.6",
]
