[project]
name = "blinx_robots"
version = "4.5.5"
authors = [
    {name = "任伟明", email = "corejk@163.com"},
]
description = "比邻星桌面式六轴协作机械臂 SDK"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: Other"
]
dependencies = [
]
license = {text = "Apache"}

[project.urls]
Homepage = "https://gitee.com/blxsoftware/robot_arm_sdk"
Issues = "https://gitee.com/blxsoftware/robot_arm_sdk/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
build = [
    "nuitka>=2.3.9",
]
